--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <ul>
                 <li><a href="./perfil.html">Perfil</a></li>
                 <li><a href="#sobre-mi">Sobre mí</a></li>
-                <li><a href="./proyectos.css">Proyectos</a></li>
+                <li><a href="./proyectos.html">Proyectos</a></li>
                 <li><a href="#habilidades">Habilidades</a></li>
                 <li><a href="./formulario.html">Contacto</a></li>
                 <li><a href="#redes-sociales">Redes sociales</a></li>
