--- a/index.html
+++ b/index.html
@@ -23,9 +23,6 @@
             </ul>
         </nav>
     </header>
-    <!--Boto de modo oscuro o claro -->
-    <button id="modo-toggle">🌙 Modo oscuro</button>
-
 
     <div class="contenedor">
         <!-- Menú lateral izquierdo -->
@@ -39,6 +36,8 @@
                 <li><a href="./formulario.html">Contacto</a></li>
                 <li><a href="#redes-sociales">Redes sociales</a></li>
             </ul>
+            <!--Boto de modo oscuro o claro -->
+            <button id="modo-toggle">🌙 Modo oscuro</button>
         </aside>
 
         <!-- Contenido principal -->
@@ -77,6 +76,40 @@
                     </div>
                 </div>
             </div>
+            <!-- SOBRE MÍ -->
+            <section id="sobre-mi" class="descripcion">
+                <h2>Sobre mí</h2>
+                <p>
+                    ¡Hola! Soy un apasionado del desarrollo web y la tecnología. Me encanta crear soluciones creativas y
+                    funcionales que impacten positivamente a las personas.
+                    Tengo experiencia en HTML, CSS, JavaScript y bases de datos, y siempre estoy aprendiendo nuevas
+                    herramientas para mejorar mis proyectos.
+                </p>
+            </section>
+
+            <!-- HABILIDADES -->
+            <section id="habilidades" class="descripcion">
+                <h2>Habilidades</h2>
+                <ul>
+                    <li>✔️ HTML5, CSS3, JavaScript</li>
+                    <li>✔️ Git y control de versiones</li>
+                    <li>✔️ Manejo de bases de datos</li>
+                    <li>✔️ Trabajo en equipo y comunicación</li>
+                    <li>✔️ Diseño responsivo y accesibilidad</li>
+                </ul>
+            </section>
+
+            <!-- REDES SOCIALES -->
+            <section id="redes-sociales" class="descripcion">
+                <h2>Redes Sociales</h2>
+                <p>Puedes encontrarme y contactarme en:</p>
+                <ul>
+                    <li><a href="https://www.facebook.com" target="_blank">🌐 Facebook</a></li>
+                    <li><a href="https://www.instagram.com" target="_blank">📸 Instagram</a></li>
+                    <li><a href="https://www.linkedin.com" target="_blank">💼 LinkedIn</a></li>
+                    <li><a href="mailto:tuemail@ejemplo.com">📧 Correo</a></li>
+                </ul>
+            </section>
         </main>
 
     </div>
