--- a/perfil.html
+++ b/perfil.html
@@ -23,23 +23,37 @@
         </nav>
     </header>
 
-        <!--Boto de modo oscuro o claro -->
-    <button id="modo-toggle">🌙 Modo oscuro</button>
+    <div class="contenedor">
+        <!--Menu lateral-->
+        <aside class="menu-lateral">
+            <h2>Menú</h2>
+            <ul>
+                <li><a href="./perfil.html">Perfil</a></li>
+                <li><a href="./index.html#sobre-mi">Sobre mí</a></li>
+                <li><a href="./proyectos.html">Proyectos</a></li>
+                <li><a href="./index.html#habilidades">Habilidades</a></li>
+                <li><a href="./formulario.html">Contacto</a></li>
+                <li><a href="./index.html#redes-sociales">Redes sociales</a></li>
+            </ul>
+            <button id="modo-toggle">🌙 Modo oscuro</button>
+        </aside>
 
-    <main class="contenido-principal-Perfil">
-        <section id="perfil" class="perfil">
-            <h2>Perfil</h2>
-            <div class="contenido-perfil">
-                <img src="./imagenes/mi_foto.png" alt="Foto de perfil" class="foto-perfil" />
-                <div class="descripcion-perfil">
-                    <p>Hola, soy David. Soy desarrollador web con pasión por crear sitios y aplicaciones funcionales y
-                        atractivas. Tengo experiencia en HTML, CSS, JavaScript y frameworks modernos.</p>
-                    <p>Me gusta aprender nuevas tecnologías y mejorar constantemente mis habilidades para ofrecer
-                        soluciones de calidad.</p>
+        <main class="contenido-principal-Perfil">
+            <section id="perfil" class="perfil">
+                <h2>Perfil</h2>
+                <div class="contenido-perfil">
+                    <img src="./imagenes/mi_foto.png" alt="Foto de perfil" class="foto-perfil" />
+                    <div class="descripcion-perfil">
+                        <p>Hola, soy David. Soy desarrollador web con pasión por crear sitios y aplicaciones funcionales
+                            y
+                            atractivas. Tengo experiencia en HTML, CSS, JavaScript y frameworks modernos.</p>
+                        <p>Me gusta aprender nuevas tecnologías y mejorar constantemente mis habilidades para ofrecer
+                            soluciones de calidad.</p>
+                    </div>
                 </div>
-            </div>
-        </section>
-    </main>
+            </section>
+        </main>
+    </div>
 
     <footer>
         <p>&copy; 2025 Mi Sitio Web. Todos los derechos reservados.</p>
