--- a/proyectos.html
+++ b/proyectos.html
@@ -22,46 +22,63 @@
             </ul>
         </nav>
     </header>
-    <!--Boto de modo oscuro o claro -->
-    <button id="modo-toggle">🌙 Modo oscuro</button>
 
-    <main class="contenido-principal-Proyectos">
-        <section id="proyectos" class="proyectos">
-            <h2>Proyectos</h2>
-            <div class="lista-proyectos">
+    <div class="contenedor">
+        <!--Menu lateral-->
+        <aside class="menu-lateral">
+            <h2>Menú</h2>
+            <ul>
+                <li><a href="./perfil.html">Perfil</a></li>
+                <li><a href="./index.html#sobre-mi">Sobre mí</a></li>
+                <li><a href="./proyectos.html">Proyectos</a></li>
+                <li><a href="./index.html#habilidades">Habilidades</a></li>
+                <li><a href="./formulario.html">Contacto</a></li>
+                <li><a href="./index.html#redes-sociales">Redes sociales</a></li>
+            </ul>
+            <button id="modo-toggle">🌙 Modo oscuro</button>
+        </aside>
 
-                <article class="proyecto">
-                    <h3>Portafolio Personal</h3>
-                    <img src="./imagenes/ima1.png" alt="Vista previa del Proyecto 1" class="img-proyecto">
-                    <p>Diseñé una página web personal con HTML y CSS para mostrar mi perfil, habilidades y formas de
-                        contacto de manera clara y visual.</p>
-                </article>
+        <main class="contenido-principal-Proyectos">
+            <section id="proyectos" class="proyectos">
+                <h2>Proyectos</h2>
+                <div class="lista-proyectos">
 
-                <article class="proyecto">
-                    <h3>Catálogo de Productos</h3>
-                    <img src="./imagenes/img2.png" alt="Vista previa del Proyecto 2" class="img-proyecto">
-                    <p>Creé un catálogo online usando HTML, CSS y un poco de JavaScript donde se muestran productos con
-                        imágenes, precios y una breve descripción.</p>
-                </article>
+                    <article class="proyecto">
+                        <h3>Portafolio Personal</h3>
+                        <img src="./imagenes/ima1.png" alt="Vista previa del Proyecto 1" class="img-proyecto">
+                        <p>Diseñé una página web personal con HTML y CSS para mostrar mi perfil, habilidades y formas de
+                            contacto de manera clara y visual.</p>
+                    </article>
 
-                <article class="proyecto">
-                    <h3>Formulario Interactivo</h3>
-                    <img src="./imagenes/im3.jpg" alt="Vista previa del Proyecto 3" class="img-proyecto">
-                    <p>Desarrollé un formulario responsivo que permite a los usuarios enviar mensajes. Utiliza HTML para
-                        la estructura y CSS para el diseño atractivo.</p>
-                </article>
+                    <article class="proyecto">
+                        <h3>Catálogo de Productos</h3>
+                        <img src="./imagenes/img2.png" alt="Vista previa del Proyecto 2" class="img-proyecto">
+                        <p>Creé un catálogo online usando HTML, CSS y un poco de JavaScript donde se muestran productos
+                            con
+                            imágenes, precios y una breve descripción.</p>
+                    </article>
 
-                <article class="proyecto">
-                    <h3>Página de Cumpleaños Especial</h3>
-                    <img src="./imagenes/img8.jpg" alt="Vista previa del Proyecto 4" class="img-proyecto">
-                    <p>Diseñé una página web para una persona especial, para su cumpleaños, utilizando HTML, CSS y un
-                        poco de JavaScript.</p>
-                </article>
+                    <article class="proyecto">
+                        <h3>Formulario Interactivo</h3>
+                        <img src="./imagenes/im3.jpg" alt="Vista previa del Proyecto 3" class="img-proyecto">
+                        <p>Desarrollé un formulario responsivo que permite a los usuarios enviar mensajes. Utiliza HTML
+                            para
+                            la estructura y CSS para el diseño atractivo.</p>
+                    </article>
 
-            </div>
-        </section>
+                    <article class="proyecto">
+                        <h3>Página de Cumpleaños Especial</h3>
+                        <img src="./imagenes/img8.jpg" alt="Vista previa del Proyecto 4" class="img-proyecto">
+                        <p>Diseñé una página web para una persona especial, para su cumpleaños, utilizando HTML, CSS y
+                            un
+                            poco de JavaScript.</p>
+                    </article>
 
-    </main>
+                </div>
+            </section>
+
+        </main>
+    </div>
 
     <footer>
         <p>&copy; 2025 Mi Sitio Web. Todos los derechos reservados.</p>
