Agrega un cambio a las imagenes de galeria

--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
                         referrerpolicy="strict-origin-when-cross-origin" allow="autoplay; fullscreen" allowfullscreen>
                     </iframe>
                 </div>
-
-                <div class="galeria">
+                <!--Galeria de fotos-->
+                <div class="descripcion">
                     <h3>Galería</h3>
                     <div class="imagenes">
                         <img src="./imagenes/img4.jpg" alt="Imagen 1" />
@@ -75,7 +75,9 @@
                         <img src="./imagenes/imag6.png" alt="Imagen 3" />
                     </div>
                 </div>
+
             </div>
+
             <!-- SOBRE MÍ -->
             <section id="sobre-mi" class="descripcion">
                 <h2>Sobre mí</h2>
