--- a/index.html
+++ b/index.html
@@ -117,9 +117,17 @@
     </div>
 
     <!-- Pie de página -->
-    <footer>
-        <p>&copy; 2025 Mi Sitio Web. Todos los derechos reservados.</p>
+    <footer class="footer">
+        <div class="footer-content">
+            <p>&copy; 2025 Mi Portafolio Personal</p>
+            <div class="footer-redes">
+                <a href="https://facebook.com" target="_blank">Facebook</a>
+                <a href="https://instagram.com" target="_blank">Instagram</a>
+                <a href="https://linkedin.com" target="_blank">LinkedIn</a>
+            </div>
+        </div>
     </footer>
+
 
 </body>
 
