Mejora en el modo oscuro II

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- Inter -->
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
-    <title>Página Completa</title>
+    <title>Portafolio</title>
     <link rel="stylesheet" href="style.css" />
 </head>
 
@@ -57,23 +57,31 @@
                         A David no solo le gusta el café. Lo disfruta. Porque, en el fondo, sabe que detrás de cada
                         taza... nace una buena idea.</p>
                 </div>
-                <div class="video-container">
-                    <h2>Video Principal</h2>
+                <!--Galeria de fotos-->
+                <div class="descripcion">
+                    <h3>Galería</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error iure, eius illo autem consequuntur
+                        quisquam quod iste aperiam sed non officiis consectetur voluptatem voluptas sint similique quia
+                        nesciunt quibusdam inventore.</p>
+                    <div class="imagenes">
+                        <img src="./imagenes/img4.jpg" alt="Imagen 1" />
+                        <img src="./imagenes/img7.jpg" alt="Imagen 2" />
+                        <img src="./imagenes/imag6.png" alt="Imagen 3" />
+                    </div>
+                </div>
+                <!--div del video-->
+                <div class="descripcion">
+                    <h3>Una Taza de Café, Una Idea</h3>
+                    <p>Un vistazo divertido y auténtico al momento en que el café y el desarrollo de software se
+                        encuentran. Es ese instante especial donde una taza caliente despierta la mente, inspira ideas y
+                        activa la creatividad en el código. Perfecto para capturar la esencia de cómo el café se
+                        convierte en compañero fiel en los momentos más desafiantes y creativos.</p>
                     <iframe
                         src="https://www.youtube.com/embed/qzMUu_1RCV0?si=TkPseqwuzP2iN-Qc&start=7&autoplay=1&mute=1"
                         title="YouTube video player" frameborder="0"
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                         referrerpolicy="strict-origin-when-cross-origin" allow="autoplay; fullscreen" allowfullscreen>
                     </iframe>
-                </div>
-                <!--Galeria de fotos-->
-                <div class="descripcion">
-                    <h3>Galería</h3>
-                    <div class="imagenes">
-                        <img src="./imagenes/img4.jpg" alt="Imagen 1" />
-                        <img src="./imagenes/img7.jpg" alt="Imagen 2" />
-                        <img src="./imagenes/imag6.png" alt="Imagen 3" />
-                    </div>
                 </div>
 
             </div>
