--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- Inter -->
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
+    <link rel="icon" href="imagenes/logo.jpg" type="image/png">
     <title>Portafolio</title>
     <link rel="stylesheet" href="style.css" />
 </head>
@@ -15,7 +16,8 @@
     <!-- Menú superior -->
     <header>
         <h1>Mi Portafolio Personal</h1>
-        <nav>
+        <button class="hamburguesa" id="hamburguesa-toggle">☰</button>
+        <nav id="menu-superior" class="menu-superior">
             <ul class="menu-superior">
                 <li><a href="./perfil.html">Perfil</a></li>
                 <li><a href="./proyectos.html">Proyectos</a></li>
@@ -29,11 +31,8 @@
         <aside class="menu-lateral">
             <h2>Menú</h2>
             <ul>
-                <li><a href="./perfil.html">Perfil</a></li>
                 <li><a href="#sobre-mi">Sobre mí</a></li>
-                <li><a href="./proyectos.html">Proyectos</a></li>
                 <li><a href="#habilidades">Habilidades</a></li>
-                <li><a href="./formulario.html">Contacto</a></li>
                 <li><a href="#redes-sociales">Redes sociales</a></li>
             </ul>
             <!--Boto de modo oscuro o claro -->
@@ -144,6 +143,7 @@
 
 <!--Un poco de js para la función del boton-->
 <script>
+    //Función para el modo claro / oscuro 
     const boton = document.getElementById('modo-toggle');
     const body = document.body;
 
@@ -159,6 +159,15 @@
         localStorage.setItem('modo', modo);
         boton.textContent = modo === 'oscuro' ? '☀️ Modo claro' : '🌙 Modo oscuro';
     });
+
+    // Función para el boton Hamburguesa 
+    const toggle = document.getElementById('hamburguesa-toggle');
+    const menu = document.getElementById('menu-superior');
+
+    toggle.addEventListener('click', () => {
+        menu.classList.toggle('mostrar');
+    });
+
 </script>
 
 </html>
