Agregué iconos a los menú

--- a/formulario.html
+++ b/formulario.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" href="imagenes/logo.jpg" type="image/png">
+    <!-- ...Link oara los icon ... -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <title>Portafolio</title>
     <link rel="stylesheet" href="style.css" />
 </head>
@@ -15,9 +17,9 @@
         <button class="hamburguesa" id="hamburguesa-toggle">☰</button>
         <nav id="menu-superior" class="menu-superior">
             <ul class="menu-superior">
-                <li><a href="./index.html">Inicio</a></li>
-                <li><a href="./perfil.html">Perfil</a></li>
-                <li><a href="./proyectos.html">Proyectos</a></li>
+                <li><a href="./index.html"><i class="fas fa-home"></i> Inicio</a></li>
+                <li><a href="./perfil.html"><i class="fas fa-user"></i> Perfil</a></li>
+                <li><a href="./proyectos.html"><i class="fas fa-folder-open"></i> Proyectos</a></li>
             </ul>
         </nav>
     </header>
@@ -29,9 +31,9 @@
             <h2>Menú</h2>
             <ul>
                 <ul>
-                    <li><a href="index.html#sobre-mi">Sobre mí</a></li>
-                    <li><a href="index.html#habilidades">Habilidades</a></li>
-                    <li><a href="index.html#redes-sociales">Redes sociales</a></li>
+                    <li><a href="#sobre-mi"><i class="fas fa-user"></i> Sobre mí</a></li>
+                    <li><a href="#habilidades"><i class="fas fa-code"></i> Habilidades</a></li>
+                    <li><a href="#redes-sociales"><i class="fas fa-share-alt"></i> Redes sociales</a></li>
                 </ul>
             </ul>
             <button id="modo-toggle">🌙 Modo oscuro</button>
@@ -64,16 +66,23 @@
             </section>
         </main>
     </div>
-    <footer class="footer">
-        <div class="footer-content">
-            <p>&copy; 2025 Mi Portafolio Personal</p>
-            <div class="footer-redes">
-                <a href="https://facebook.com" target="_blank">Facebook</a>
-                <a href="https://instagram.com" target="_blank">Instagram</a>
-                <a href="https://linkedin.com" target="_blank">LinkedIn</a>
-            </div>
+<footer class="footer">
+    <div class="footer-content">
+        <p>&copy; 2025 Mi Portafolio Personal</p>
+        <div class="footer-redes">
+            <a href="https://facebook.com" target="_blank">
+                <i class="fab fa-facebook-f"></i> Facebook
+            </a>
+            <a href="https://instagram.com" target="_blank">
+                <i class="fab fa-instagram"></i> Instagram
+            </a>
+            <a href="https://linkedin.com" target="_blank">
+                <i class="fab fa-linkedin-in"></i> LinkedIn
+            </a>
         </div>
-    </footer>
+    </div>
+</footer>
+
 
 
 </body>
