--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <!-- Inter -->
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
     <link rel="icon" href="imagenes/logo.jpg" type="image/png">
+    <!-- ...Link oara los icon ... -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <title>Portafolio</title>
     <link rel="stylesheet" href="style.css" />
 </head>
@@ -19,9 +21,9 @@
         <button class="hamburguesa" id="hamburguesa-toggle">☰</button>
         <nav id="menu-superior" class="menu-superior">
             <ul class="menu-superior">
-                <li><a href="./perfil.html">Perfil</a></li>
-                <li><a href="./proyectos.html">Proyectos</a></li>
-                <li><a href="./formulario.html">Contacto</a></li>
+                <li><a href="./perfil.html"><i class="fas fa-id-card"></i> Perfil</a></li>
+                <li><a href="./proyectos.html"><i class="fas fa-laptop-code"></i> Proyectos</a></li>
+                <li><a href="./formulario.html"><i class="fas fa-envelope"></i> Contacto</a></li>
             </ul>
         </nav>
     </header>
@@ -31,9 +33,9 @@
         <aside class="menu-lateral">
             <h2>Menú</h2>
             <ul>
-                <li><a href="#sobre-mi">Sobre mí</a></li>
-                <li><a href="#habilidades">Habilidades</a></li>
-                <li><a href="#redes-sociales">Redes sociales</a></li>
+                <li><a href="#sobre-mi"><i class="fas fa-user"></i> Sobre mí</a></li>
+                <li><a href="#habilidades"><i class="fas fa-code"></i> Habilidades</a></li>
+                <li><a href="#redes-sociales"><i class="fas fa-share-alt"></i> Redes sociales</a></li>
             </ul>
             <!--Boto de modo oscuro o claro -->
             <button id="modo-toggle">🌙 Modo oscuro</button>
