Modifique lo responsivo

--- a/formulario.html
+++ b/formulario.html
@@ -66,6 +66,7 @@
             </section>
         </main>
     </div>
+    <!--Footer-->
 <footer class="footer">
     <div class="footer-content">
         <p>&copy; 2025 Mi Portafolio Personal</p>
