--- a/index.html
+++ b/index.html
@@ -133,13 +133,18 @@
         <div class="footer-content">
             <p>&copy; 2025 Mi Portafolio Personal</p>
             <div class="footer-redes">
-                <a href="https://facebook.com" target="_blank">Facebook</a>
-                <a href="https://instagram.com" target="_blank">Instagram</a>
-                <a href="https://linkedin.com" target="_blank">LinkedIn</a>
+                <a href="https://facebook.com" target="_blank">
+                    <i class="fab fa-facebook-f"></i> Facebook
+                </a>
+                <a href="https://instagram.com" target="_blank">
+                    <i class="fab fa-instagram"></i> Instagram
+                </a>
+                <a href="https://linkedin.com" target="_blank">
+                    <i class="fab fa-linkedin-in"></i> LinkedIn
+                </a>
             </div>
         </div>
     </footer>
-
 
 </body>
 
